# ConTeXt Garden Wiki Mirror
# https://github.com/gucci-on-fleek/context-wiki-mirror
# SPDX-License-Identifier: MPL-2.0+ or GFDL-1.2+
# SPDX-FileCopyrightText: 2026 Max Chernoff

[project]
name = "context-wiki-mirror"
license = "MPL-2.0+ or GFDL-1.2+"
authors = [{ name = "Max Chernoff" }]
version = "0.1.0"
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "aiohttp ~= 3.13.3",
    "beautifulsoup4 ~= 4.14.3",
    "Jinja2 ~= 3.0",
    "lxml ~= 6.0.2",
    "pyvips ~= 3.0.0",
]


[project.scripts]
context-wiki-mirror = "context_wiki_mirror:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = ["context_wiki_mirror"]


[tool.ruff]
line-length = 80
fix = true
preview = true


[tool.ruff.lint]
extend-select = [
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "NPY", # numpy
    "PL", # pylint
    "PTH", # flake8-use-pathlib
    "T20", # flake8-print
    "UP", # pyupgrade
]
extend-ignore = [
    "ANN002", # missing type annotation for args
    "ANN003", # missing type annotation for kwargs
    "ANN401", # Dynamically typed expressions are disallowed
    "ASYNC240", # Async functions should not use pathlib.Path methods
    "F821", # undefined name
    "PLC0415", # import should be at the top-level of a file
    "PLW0603", # Using the global statement is discouraged
]
unfixable = ["F401"] # ignore unused imports


[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["pprint"]


[tool.ruff.lint.isort]
required-imports = ["from pprint import pp as pprint"]
lines-after-imports = 2
